update api admin
