# src/routers/user.router.js
@@ -4,6 +4,35 @@ const router = express.Router();
 const userRouter = require("../app/controllers/user.controller");
 const authenticate = require("../app/middlewares/authenticate");
 const uploadImage = require("../app/middlewares/uploadImage");
+const {
+  RequireRoleAdmin,
+  RequireNotBanned,
+} = require("../app/middlewares/require");
+
+// admin
+router.get(
+  "/",
+  authenticate,
+  RequireRoleAdmin,
+  RequireNotBanned,
+  userRouter.getAllUser
+);
+
+router.patch(
+  "/:id/banned",
+  authenticate,
+  RequireRoleAdmin,
+  RequireNotBanned,
+  userRouter.bannedAccount
+);
+
+router.patch(
+  "/:id/unbanned",
+  authenticate,
+  RequireRoleAdmin,
+  RequireNotBanned,
+  userRouter.unbannedAccount
+);
 
 router.post("/send-email-reset-pw", userRouter.requireSendEmailResetPw);
 router.post("/google-oauth", userRouter.googleOAuth);
