# swagger.json
@@ -10,9 +10,7 @@
     "/api/users/login": {
       "post": {
         "summary": "Sign in to the application",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "parameters": [
           {
             "name": "email",
@@ -43,9 +41,7 @@
     "/api/users/register": {
       "post": {
         "summary": "Sign up to the application",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "parameters": [
           {
             "name": "email",
@@ -81,9 +77,7 @@
     },
     "/api/users/logout": {
       "delete": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Log out from the application",
         "parameters": [
           {
@@ -104,9 +98,7 @@
     "/api/users/profile": {
       "get": {
         "summary": "Get user's profile",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to retrieve the user's profile.",
         "parameters": [
           {
@@ -137,9 +129,7 @@
       },
       "patch": {
         "summary": "Update user's profile",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint for updating the user's profile.",
         "parameters": [
           {
@@ -225,13 +215,9 @@
     "/api/users/avatar": {
       "patch": {
         "summary": "Update user's avatar",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint for updating the user's avatar.",
-        "consumes": [
-          "multipart/form-data"
-        ],
+        "consumes": ["multipart/form-data"],
         "parameters": [
           {
             "name": "avatar",
@@ -274,9 +260,7 @@
     "/api/users/verify": {
       "post": {
         "summary": "Verify the user",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to verify the user with a verification token.",
         "parameters": [
           {
@@ -322,9 +306,7 @@
     "/api/users/resend-verification": {
       "post": {
         "summary": "Resend verification via email",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to resend the verification email to the user.",
         "responses": {
           "200": {
@@ -352,9 +334,7 @@
     "/api/users/send-email-renew-pw": {
       "post": {
         "summary": "Send email to renew password",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to send an email for password renewal.",
         "requestBody": {
           "required": true,
@@ -369,9 +349,7 @@
                     "example": "example@example.com"
                   }
                 },
-                "required": [
-                  "email"
-                ]
+                "required": ["email"]
               }
             }
           }
@@ -402,9 +380,7 @@
     "/api/users/change-pw": {
       "patch": {
         "summary": "Change user password",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to change user password.",
         "requestBody": {
           "required": true,
@@ -424,10 +400,7 @@
                     "example": "new_password"
                   }
                 },
-                "required": [
-                  "password",
-                  "newPassword"
-                ]
+                "required": ["password", "newPassword"]
               }
             }
           }
@@ -458,9 +431,7 @@
     "/api/users/resetPw": {
       "patch": {
         "summary": "Reset user password",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to reset user password using a token.",
         "requestBody": {
           "required": true,
@@ -480,10 +451,7 @@
                     "example": "reset_token"
                   }
                 },
-                "required": [
-                  "newPassword",
-                  "token"
-                ]
+                "required": ["newPassword", "token"]
               }
             }
           }
@@ -517,9 +485,7 @@
     "/api/users/facebook-oauth": {
       "post": {
         "summary": "Login via Facebook OAuth",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to authenticate users via Facebook OAuth.",
         "requestBody": {
           "required": true,
@@ -534,9 +500,7 @@
                     "example": "facebook_user_id"
                   }
                 },
-                "required": [
-                  "fb_id"
-                ]
+                "required": ["fb_id"]
               }
             }
           }
@@ -563,9 +527,7 @@
     "/api/users/google-oauth": {
       "post": {
         "summary": "Login via Google OAuth",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to authenticate users via Google OAuth.",
         "requestBody": {
           "required": true,
@@ -580,9 +542,7 @@
                     "example": "google_user_id"
                   }
                 },
-                "required": [
-                  "gg_id"
-                ]
+                "required": ["gg_id"]
               }
             }
           }
@@ -609,9 +569,7 @@
     "/api/users/send-email-reset-pw": {
       "post": {
         "summary": "Send email for password reset",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "Endpoint to send an email for password reset to the specified email address.",
         "parameters": {
           "required": true,
@@ -624,9 +582,7 @@
                 "example": "example@example.com"
               }
             },
-            "required": [
-              "email"
-            ]
+            "required": ["email"]
           }
         },
         "responses": {
@@ -655,9 +611,7 @@
     "api/classes/": {
       "post": {
         "summary": "Create a new class",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "name": "class_name",
@@ -707,9 +661,7 @@
       },
       "get": {
         "summary": "Get class joined",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "name": "Authorization",
@@ -733,9 +685,7 @@
     "api/classes/:id": {
       "get": {
         "summary": "Get class details by ID",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "in": "path",
@@ -764,9 +714,7 @@
       },
       "patch": {
         "summary": "Update class profile by ID",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "in": "path",
@@ -821,9 +769,7 @@
     "api/classes/join": {
       "post": {
         "summary": "Join a class by ID",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "in": "formData",
@@ -851,9 +797,7 @@
     "api/classes/:id/request-send-invitation": {
       "post": {
         "summary": "Send invitation to join a class by ID",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "in": "path",
@@ -891,9 +835,7 @@
     "api/classes/generate-class_code": {
       "get": {
         "summary": "Generate class code",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "responses": {
           "200": {
             "description": "Success generate class code",
@@ -938,9 +880,7 @@
     "api/classes/:id/out": {
       "delete": {
         "summary": "Send invitation to join a class by ID",
-        "tags": [
-          "Classes"
-        ],
+        "tags": ["Classes"],
         "parameters": [
           {
             "in": "path",
@@ -970,9 +910,7 @@
     },
     "api/classes/:id/grades": {
       "get": {
-        "tags": [
-          "Grade composition"
-        ],
+        "tags": ["Grade composition"],
         "summary": "Get list grade composition of class, you must be join in class",
         "parameters": [
           {
@@ -1001,9 +939,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Grade composition"
-        ],
+        "tags": ["Grade composition"],
         "summary": "Create or update grade composition",
         "parameters": [
           {
@@ -1044,9 +980,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Grade composition"
-        ],
+        "tags": ["Grade composition"],
         "summary": "Delete list grade composition by list _id",
         "parameters": [
           {
@@ -1082,9 +1016,7 @@
     },
     "api/classes/:id/student-list": {
       "get": {
-        "tags": [
-          "grades"
-        ],
+        "tags": ["grades"],
         "summary": "Get list student (include grades) of class",
         "parameters": [
           {
@@ -1113,9 +1045,7 @@
         }
       },
       "post": {
-        "tags": [
-          "grades"
-        ],
+        "tags": ["grades"],
         "summary": "Upload list student (not include grades) of class",
         "parameters": [
           {
@@ -1155,9 +1085,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "grades"
-        ],
+        "tags": ["grades"],
         "summary": "Delete list student of class",
         "parameters": [
           {
@@ -1198,9 +1126,7 @@
     },
     "api/classes/:id/student-list/:student_id": {
       "put": {
-        "tags": [
-          "grades"
-        ],
+        "tags": ["grades"],
         "summary": "Upload Grades of student in class",
         "parameters": [
           {
@@ -1244,9 +1170,7 @@
     },
     "api/reviews?class_id=***&state=***&sort=***": {
       "get": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "description": "Get list review. Require auth. If student => get your list review. teacher => all review",
         "responses": {
           "200": {
@@ -1263,9 +1187,7 @@
     },
     "api/reviews": {
       "post": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "description": "Create review",
         "parameters": [
           {
@@ -1303,9 +1225,7 @@
     },
     "api/reviews/:id": {
       "get": {
-        "tags": [
-          "Reviews"
-        ],
+        "tags": ["Reviews"],
         "description": "Get review",
         "responses": {
           "200": {
@@ -1320,9 +1240,7 @@
     "api/reviews/:id/comments": {
       "get": {
         "description": "Get list comment of review",
-        "tags": [
-          "Comment"
-        ],
+        "tags": ["Comment"],
         "responses": {
           "200": {
             "description": "Success",
@@ -1337,9 +1255,7 @@
       },
       "post": {
         "description": "Add new comment (only teacher and owner of review can used)",
-        "tags": [
-          "Comment"
-        ],
+        "tags": ["Comment"],
         "parameters": [
           {
             "name": "Authorization",
@@ -1364,9 +1280,7 @@
     "api/reviews/:id/final-decision": {
       "post": {
         "description": "Make final decision of review",
-        "tags": [
-          "Comment"
-        ],
+        "tags": ["Comment"],
         "parameters": [
           {
             "name": "Authorization",
@@ -1387,8 +1301,33 @@
           }
         }
       }
+    },
+    "/api/users/": {
+      "get": {
+        "description": "Get all user, Require Authentication and role Admin",
+        "tags": ["Admin Feature"]
+      }
+    },
+    "/api/users/:id/banned": {
+      "patch": {
+        "description": "Banned user, Require Authentication and role Admin",
+        "tags": ["Admin Feature"]
+      }
+    },
+    "/api/users/:id/unbanned": {
+      "patch": {
+        "description": "Unbanned user, Require Authentication and role Admin",
+        "tags": ["Admin Feature"]
+      }
+    },
+    "/api/classes": {
+      "get": {
+        "description": "Get all class, Require Authentication and role Admin",
+        "tags": ["Admin Feature"]
+      }
     }
   },
+
   "definitions": {
     "Authentication": {
       "type": "object",
